# campcounselor

./: .gitignore  ChangeLog  README.md  meson.build  net.line72.campcounselor.yml
data/: meson.build  net.line72.campcounselor-icon.xcf  net.line72.campcounselor.desktop  net.line72.campcounselor.gresource.xml  net.line72.campcounselor.gschema.xml  net.line72.campcounselor.metainfo.xml
data/stylesheet/: default.css
data/ui/: album.blp  album.ui  editcomment.ui  headerbar.blp  headerbar.ui  mainwindow.ui  mediabar.ui  setupdialog.ui
scripts/: mock-server.py
src/: Album.vala  AlbumEditComment.vala  AlbumListItem.vala  AlbumListModel.vala  AlbumSorter.vala  Application.vala  Bandcamp.vala  BandcampDownloader.vala  Database.vala  DateUtils.vala  ImageCache.vala  MPRIS.vala  MainWindow.vala  MediaBar.vala  MediaPlayer.vala  MessageBoard.vala  Observer.vala  SettingsManager.vala  SetupDialog.vala  bandcamp.vala  main.vala  meson.build
vapi/: config.vapi
