sources = files(
  'Application.vala',
  'MainWindow.vala',
  'Bandcamp.vala',
  'Album.vala',
  'AlbumEditComment.vala',
  'AlbumListItem.vala',
  'AlbumListModel.vala',
  'AlbumSorter.vala',
  'DateUtils.vala',
  'ImageCache.vala',
  'Database.vala'
)

executable(
  'campcounselor',
  [sources,  app_resources],
  dependencies: dependencies,
  install: true
)
